- add page auth rules - add api auth rules - structure frontend files

--- a/BE/src/main/resources/templates/index.html
+++ b/BE/src/main/resources/templates/index.html
@@ -7,7 +7,8 @@
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-    <a href="FE/landingPage/registration.html">Registration</a>
+    <h1>HOMEa</h1>
+    <a href="/registration">Registration</a>
 </body>
     
 </html>
