--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="../res/css/mystyle.css">
+    <link rel="stylesheet" href="../../public/css/mystyle.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-    
+
 <!--USE JSON-->
 <!--Object Oriented Classes for User (user.class.php)-->
 
@@ -32,7 +32,7 @@
             </div>
             <!--Adresse-->
             <label>Adresse:</label>
-                <div>   
+                <div>
                     <div class="input_row">
                         <input type="text" name="Strasse" placeholder="Strasse/Nr." required>
                     </div>
@@ -78,7 +78,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script type="text/javascript" src="../res/js/myscript.js"></script>
+<script type="text/javascript" src="../../public/js/authentication.js"></script>
 </body>
 
 </html>
