--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../public/css/mystyle.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
@@ -68,7 +68,7 @@
                 <input type="text" name="Zahlungsinformationen" placeholder="Zahlungsinformationen" required>
             </div>
             <div class="text-center">
-                <input type="submit" value="Submit">
+                <input class="submit" type="submit" value="Submit">
             </div>
         </form>
     </div>
@@ -78,7 +78,10 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script type="text/javascript" src="../../public/js/authentication.js"></script>
+<script type="text/javascript" src="js/authentication.js"></script>
+<script>
+    $(document).ready(newRegistration());
+</script>
 </body>
 
 </html>
