--- a/BE/src/main/resources/templates/index.html
+++ b/BE/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-    <h1>HOMEa</h1>
+    <h1>HOME</h1>
     <a href="/registration">Registration</a>
 </body>
     
