--- a/BE/src/main/resources/templates/authTemplates/login.html
+++ b/BE/src/main/resources/templates/authTemplates/login.html
@@ -5,25 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../public/css/mystyle.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-<h1>LOGIN</h1>
     <container>
 
         <div class="input_container">
-            <form name="formValidation" id="formValidation">
+            <form id="loginForm">
                 <!--Emailadresse-->
                 <div class="input_row">
-                    <input type="text" name="Emailadresse" placeholder="Emailadresse" required>
+                    <input id="email" type="text" name="Emailadresse" placeholder="Emailadresse" required>
                 </div>
                 <!--Passwort-->
                 <div class="input_row pw">
-                    <input type="password" name="Passwort" placeholder="Passwort" required>
+                    <input id="password"  type="password" name="Passwort" placeholder="Passwort" required>
                 </div>
                 <div class="text-center">
-                    <input type="submit" value="Login">
+                    <input id="submit-login" type="submit" value="Login">
                 </div>
             </form>
         </div>
@@ -32,7 +31,10 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="../../public/js/authentication.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+    <script>
+        $(document).ready(loginReady());
+    </script>
 </body>
 
 </html>
