--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/mystyle.css">
+<!--    <link rel="stylesheet" href="css/mystyle.css">-->
     <title>beste.brettspiele.at</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,70 +17,95 @@
 <container>
 
     <div class="input_container">
-        <form name="formValidation" id="formValidation" action="../../BE/spring/backend.java" method="post">
-            <!--Anrede-->
-            <div class="input_row">
-                <input type="text" name="Anrede" placeholder="Anrede" required>
+        <form id="registrationForm" novalidate>
+            <div class="mb-3">
+                <label for="firstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="firstName" name="firstName" required>
+                <div class="invalid-feedback">Please enter your first name.</div>
             </div>
-            <!--Vorname-->
-            <div class="input_row">
-                <input type="text" name="Vorname" placeholder="Vorname" required>
+            <div class="mb-3">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="lastName" name="lastName" required>
+                <div class="invalid-feedback">Please enter your last name.</div>
             </div>
-            <!--Nachname-->
-            <div class="input_row">
-                <input type="text" name="Nachname" placeholder="Nachname" required>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+                <div class="invalid-feedback">Please enter a valid email address.</div>
             </div>
-            <!--Adresse-->
-            <label>Adresse:</label>
-                <div>
-                    <div class="input_row">
-                        <input type="text" name="Strasse" placeholder="Strasse/Nr." required>
-                    </div>
-                </div>
-                <div id="adresse">
-                    <!--PLZ-->
-                    <div class="input_row adr">
-                        <input type="text" name="PLZ" placeholder="PLZ" required>
-                    </div>
-                    <!--Ort-->
-                    <div class="input_row adr">
-                        <input type="text" name="Ort" placeholder="Ort" required>
-                    </div>
-                </div>
-            <!--Emailadresse-->
-            <div class="input_row">
-                <input type="text" name="Emailadresse" placeholder="Emailadresse" required>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+                <div class="invalid-feedback">Please enter a password.</div>
             </div>
-            <!--Benutzername-->
-            <div class="input_row">
-                <input type="text" name="Benutzername" placeholder="Benutzername" required>
-            </div>
-            <!--Passwort-->
-            <div class="input_row pw">
-                <input type="password" name="Passwort" placeholder="Passwort" required>
-            </div>
-            <!--Passwort Wiederholung-->
-            <div class="input_row pw">
-                <input type="password" name="Passwort Wiederholung" placeholder="Passwort Wiederholung" required>
-            </div>
-            <!--Zahlungsinformationen-->
-            <div class="input_row">
-                <input type="text" name="Zahlungsinformationen" placeholder="Zahlungsinformationen" required>
-            </div>
-            <div class="text-center">
-                <input class="submit" type="submit" value="Submit">
-            </div>
+            <button type="button" class="submit btn btn-primary">Submit</button>
         </form>
+
+
+
+<!--        <form name="formValidation" id="registrationForm">-->
+<!--            &lt;!&ndash;Anrede&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Anrede" placeholder="Anrede" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Vorname&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Vorname" placeholder="Vorname" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Nachname&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Nachname" placeholder="Nachname" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Adresse&ndash;&gt;-->
+<!--            <label>Adresse:</label>-->
+<!--                <div>-->
+<!--                    <div class="input_row">-->
+<!--                        <input type="text" name="Strasse" placeholder="Strasse/Nr." required>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div id="adresse">-->
+<!--                    &lt;!&ndash;PLZ&ndash;&gt;-->
+<!--                    <div class="input_row adr">-->
+<!--                        <input type="text" name="PLZ" placeholder="PLZ" required>-->
+<!--                    </div>-->
+<!--                    &lt;!&ndash;Ort&ndash;&gt;-->
+<!--                    <div class="input_row adr">-->
+<!--                        <input type="text" name="Ort" placeholder="Ort" required>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            &lt;!&ndash;Emailadresse&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Emailadresse" placeholder="Emailadresse" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Benutzername&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Benutzername" placeholder="Benutzername" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Passwort&ndash;&gt;-->
+<!--            <div class="input_row pw">-->
+<!--                <input type="password" name="Passwort" placeholder="Passwort" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Passwort Wiederholung&ndash;&gt;-->
+<!--            <div class="input_row pw">-->
+<!--                <input type="password" name="Passwort Wiederholung" placeholder="Passwort Wiederholung" required>-->
+<!--            </div>-->
+<!--            &lt;!&ndash;Zahlungsinformationen&ndash;&gt;-->
+<!--            <div class="input_row">-->
+<!--                <input type="text" name="Zahlungsinformationen" placeholder="Zahlungsinformationen" required>-->
+<!--            </div>-->
+<!--            <div class="text-center">-->
+<!--                <input class="submit" type="submit" value="Submit">-->
+<!--            </div>-->
+<!--        </form>-->
     </div>
 
 </container>
-
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script type="text/javascript" src="js/authentication.js"></script>
+<script type="text/javascript" src="js/registration.js"></script>
 <script>
-    $(document).ready(newRegistration());
+    $(document).ready(sendRegistration());
 </script>
 </body>
 
