- get profile(user) backend - get invoices backend - add invoice backend - invoice_entry - product - add start-data.sql (can be run after app start to have some sample data)

--- a/BE/src/main/resources/templates/user/invoices.html
+++ b/BE/src/main/resources/templates/user/invoices.html
@@ -7,7 +7,14 @@
 <div layout:decorator="layout">
     <section layout:fragment="content">
         <h1>Invoices</h1>
+
+        <table id="invoices"></table>
     </section>
 </div>
+<script type="text/javascript" src="js/invoices.js"></script>
+<script>
+    $(document).ready(loginReady());
+</script>
 </body>
+
 </html>
