--- a/BE/src/main/resources/templates/pages/home_fe.html
+++ b/BE/src/main/resources/templates/pages/home_fe.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
+<html>
 <head>
     <title>beste.brettspiele.at</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="../../public/css/global.css">
+    <link rel="stylesheet" href="../../public/css/home.css">
+    <!--<script type="text/javascript" src="js/home.js"></script>-->
 </head>
 <body>
-<div layout:decorator="layout">
-    <section layout:fragment="content">
-        <h1>Welcome to the Home Page</h1>
+        <h1>Willkommen im beste.brettspiele.at Online Shop!</h1>
         <!--searchfiltercontainer
         Produkte können gelistet und je Kategorie angezeigt werden:
             Name, Bild, Preis und Bewertung -->
@@ -36,9 +35,12 @@
                 </div>
             </div>
         </container>
-    </section>
-    <script type="text/javascript" src="js/home.js"></script>
-</div>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
 </html>
 
