- invoices to cart

--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -16,7 +16,8 @@
                     <a href="/profile">Mein Konto</a>
                 </li>
                 <li class="menu-item">
-                    <a href="/cart">Warenkorb</a>
+                    <img src="../../img/shopping-cart.png" style="width:5%" onclick="toggleCartClick()">
+                    <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
                 <li class="menu-item">
                     <a href="/logout">Logout</a>
@@ -30,5 +31,6 @@
             </ul>
         </nav>
     </div>
+    <script type="text/javascript" src="js/header.js"></script>
 </body>
 </html>
