--- a/BE/src/main/resources/public/css/header.css
+++ b/BE/src/main/resources/public/css/header.css
@@ -23,3 +23,15 @@
 .header nav ul li a:hover {
     color: #555;
 }
+
+.dropdown-cart-content {
+    display: none;
+    position: absolute;
+    background-color: #f6f6f6;
+    min-width: 230px;
+    overflow: auto;
+    border: 1px solid #ddd;
+    z-index: 1;
+}
+
+.show {display: block;}
