--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--    <link rel="stylesheet" href="css/mystyle.css">-->
+    <link rel="stylesheet" href="css/mystyle.css">
     <title>beste.brettspiele.at</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
 
-<!--USE JSON-->
-<!--Object Oriented Classes for User (user.class.php)-->
-
-<!--Registrierungsformular-->
 <container>
-
     <div class="input_container">
         <form id="registrationForm" novalidate>
             <div class="mb-3">
