--- a/BE/src/main/resources/templates/admin/customermanager.html
+++ b/BE/src/main/resources/templates/admin/customermanager.html
@@ -7,6 +7,16 @@
 <div layout:decorator="layout">
     <section layout:fragment="content">
         <h1>Customer Manager</h1>
+        <h1>Willkommen in der Kundenverwaltung von bestebrettspiele.at!</h1>
+        <!--  Kunden verwalten -->
+        <!--    Kunden auflisten und deren Bestelldetails einsehen
+                Kunden aktiv/inaktiv setzen
+                Bestellungen bearbeiten -->
+        <container class="container" id="allCustomerData">
+
+        </container>
+        <script type="text/javascript" src="js/global.js"></script>
+        <script type="text/javascript" src="js/customermanager.js"></script>
     </section>
 </div>
 </body>
