--- a/BE/src/main/resources/templates/admin/productmanager.html
+++ b/BE/src/main/resources/templates/admin/productmanager.html
@@ -7,6 +7,20 @@
 <div layout:decorator="layout">
     <section layout:fragment="content">
         <h1>Product Manager</h1>
+        <h1>Willkommen in der Produktverwaltung von bestebrettspiele.at!</h1>
+        <!-- Produktverwaltung -->
+        <!-- Neue Produkte anlegen
+                Produktfoto hochladen
+                Produkte bearbeiten
+                Produkte löschen -->
+        <container class="container" id="productWorkbenchContainer">
+
+        </container>
+        <container class="container" id="allProductsData">
+
+        </container>
+        <script type="text/javascript" src="js/global.js"></script>
+        <script type="text/javascript" src="js/productmanager.js"></script>
     </section>
 </div>
 </body>
