--- a/BE/src/main/resources/templates/admin/vouchermanager.html
+++ b/BE/src/main/resources/templates/admin/vouchermanager.html
@@ -7,6 +7,17 @@
 <div layout:decorator="layout">
     <section layout:fragment="content">
         <h1>Voucher Manager</h1>
+
+        <h1>Willkommen in der Gutscheinverwaltung von bestebrettspiele.at!</h1>
+        <!--  Gutscheine verwalten -->
+        <!--    Gutscheincodes generieren
+                Gutschein mit Ablaufdatum und Wert anlegen
+                Übersicht aller Gutscheincodes-->
+        <container class="container" id="voucherData">
+
+        </container>
+        <script type="text/javascript" src="js/global.js"></script>
+        <script type="text/javascript" src="js/vouchermanager.js"></script>
     </section>
 </div>
 </body>
