--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -16,7 +16,7 @@
                     <a href="/profile">Mein Konto</a>
                 </li>
                 <li class="menu-item">
-                    <img src="../../img/shopping-cart.png" style="width:5%" onclick="toggleCartClick()">
+                    <img src="../../img/shopping_cart.png" style="width:5%" onclick="toggleCartClick()">
                     <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
                 <li class="menu-item">
