--- a/BE/src/main/resources/templates/authTemplates/login.html
+++ b/BE/src/main/resources/templates/authTemplates/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +10,8 @@
     <title>beste.brettspiele.at</title>
 </head>
 <body>
+<div layout:decorator="layout">
+    <section layout:fragment="content">
     <container>
 
         <div class="input_container">
@@ -27,7 +30,8 @@
             </form>
         </div>
     </container>
-
+    </section>
+</div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
