--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +10,8 @@
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-
+<div layout:decorator="layout">
+    <section layout:fragment="content">
 <!--USE JSON-->
 <!--Object Oriented Classes for User (user.class.php)-->
 
@@ -19,28 +21,48 @@
     <div class="input_container">
         <form id="registrationForm" novalidate>
             <div class="mb-3">
-                <label for="firstName" class="form-label">First Name</label>
+                <label for="firstName" class="form-label">Vorname:</label>
                 <input type="text" class="form-control" id="firstName" name="firstName" required>
                 <div class="invalid-feedback">Please enter your first name.</div>
             </div>
             <div class="mb-3">
-                <label for="lastName" class="form-label">Last Name</label>
+                <label for="lastName" class="form-label">Nachname:</label>
                 <input type="text" class="form-control" id="lastName" name="lastName" required>
                 <div class="invalid-feedback">Please enter your last name.</div>
             </div>
             <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label">E-mail:</label>
                 <input type="email" class="form-control" id="email" name="email" required>
                 <div class="invalid-feedback">Please enter a valid email address.</div>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
+                <label for="password" class="form-label">Password:</label>
                 <input type="password" class="form-control" id="password" name="password" required>
                 <div class="invalid-feedback">Please enter a password.</div>
             </div>
-            <button type="button" class="submit btn btn-primary">Submit</button>
+            <div class="mb-3">
+                <label for="password2" class="form-label">Password wiederholen:</label>
+                <input type="password" class="form-control" id="password2" name="password2" required>
+                <div class="invalid-feedback">Please enter the password again.</div>
+            </div>
+            <button type="button" class="btn btn-primary submit">Submit</button>
         </form>
+    </div>
 
+</container>
+    </section>
+</div>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script type="text/javascript" src="js/registration.js"></script>
+<script>
+    $(document).ready(sendRegistration());
+</script>
+
+</body>
+
+</html>
 
 
 <!--        <form name="formValidation" id="registrationForm">-->
@@ -97,16 +119,3 @@
 <!--                <input class="submit" type="submit" value="Submit">-->
 <!--            </div>-->
 <!--        </form>-->
-    </div>
-
-</container>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script type="text/javascript" src="js/registration.js"></script>
-<script>
-    $(document).ready(sendRegistration());
-</script>
-</body>
-
-</html>
