--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -22,6 +22,9 @@
                     <a href="/registration">Registration</a>
                 </li>
                 <li class="menu-item">
+                    <a href="/admin">Admin</a>
+                </li>
+                <li class="menu-item">
                     <a href="/logout">Logout</a>
                 </li>
                 <li class="menu-item">
