--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -20,12 +20,18 @@
                     <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
                 <li class="menu-item">
-                    <a href="/logout">Logout</a>
+                    <a href="/logout">
+                        <img src="../../img/user-icon.jpg" style="width:5%">
+                        <div id="userprofileContainer" class="userprofileContainer"></div>
+                    </a>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item" id="logoutButton" onclick="logout()">
+                    <a href="/">Logout</a>
+                </li>
+                <li class="menu-item" id="loginButton">
                     <a href="/login">Login</a>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item" id="registerButton">
                     <a href="/registration">Registration</a>
                 </li>
             </ul>
