--- a/BE/src/main/resources/templates/admin/productmanager.html
+++ b/BE/src/main/resources/templates/admin/productmanager.html
@@ -2,11 +2,14 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
     <title>Product Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/home.css">
+    <script type="text/javascript" src="js/global.js"></script>
 </head>
 <body>
 <div layout:decorator="layout">
     <section layout:fragment="content">
-        <h1>Product Manager</h1>
         <h1>Willkommen in der Produktverwaltung von bestebrettspiele.at!</h1>
         <!-- Produktverwaltung -->
         <!-- Neue Produkte anlegen
