--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -6,39 +6,78 @@
     <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
-    <div class="header">
-        <nav class="navbar">
-            <ul class="menu">
-                <li class="menu-item">
-                    <a href="/">Home</a>
+<div class="header">
+<!--    <nav class="navbar">-->
+<!--        <ul class="menu">-->
+<!--            <li class="menu-item">-->
+<!--                <a href="/">Home</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item">-->
+<!--                <a href="/profile">Mein Konto</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item" id="logoutButton" onclick="logout()">-->
+<!--                <a href="/">Logout</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item" id="loginButton">-->
+<!--                <a href="/login">Login</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item" id="adminButton">-->
+<!--                <a href="/admin">Admin</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item" id="registerButton">-->
+<!--                <a href="/registration">Registration</a>-->
+<!--            </li>-->
+<!--            <li class="menu-item">-->
+<!--                <img src="../../img/shopping-cart.png" style="width:5%" onclick="toggleCartClick()">-->
+<!--                <div id="cartContainer" class="dropdown-cart-content"></div>-->
+<!--            </li>-->
+<!--            <li class="menu-item" id="userHeader">-->
+<!--                <a href="/profile">-->
+<!--                    <img src="../../img/user-icon.jpg" style="width:3%">-->
+<!--                    <div id="userprofileContainer" class="userprofileContainer"></div>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="" id="navbarNav">
+            <ul class="navbar-nav"> <!-- Fehlende Bootstrap-Klasse hinzugefügt -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
                 </li>
-                <li class="menu-item">
-                    <a href="/profile">Mein Konto</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/profile">Mein Konto</a>
                 </li>
-                <li class="menu-item">
-                    <img src="../../img/shopping-cart.png" style="width:5%" onclick="toggleCartClick()">
-                    <div id="cartContainer" class="dropdown-cart-content"></div>
+                <li id="logoutButton" class="nav-item" onclick="logout()">
+                    <a class="nav-link" href="/">Abmelden</a>
                 </li>
-                <li class="menu-item">
-                    <a href="/profile">
-                        <img src="../../img/user-icon.jpg" style="width:5%">
+                <li id="loginButton" class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li id="adminButton" class="nav-item">
+                    <a class="nav-link" href="/admin">Administration</a>
+                </li>
+                <li id="registerButton" class="nav-item">
+                    <a class="nav-link" href="/registration">Registration</a>
+                </li>
+                <li id="userHeader" class="nav-item">
+                    <a class="nav-link" href="/profile">
+                        <img src="../../img/user-icon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
                         <div id="userprofileContainer" class="userprofileContainer"></div>
                     </a>
                 </li>
-                <li class="menu-item" id="logoutButton" onclick="logout()">
-                    <a href="/">Logout</a>
-                </li>
-                <li class="menu-item" id="loginButton">
-                    <a href="/login">Login</a>
-                <li class="menu-item">
-                    <a href="/admin">Admin</a>
-                </li>
-                <li class="menu-item" id="registerButton">
-                    <a href="/registration">Registration</a>
+                <li class="nav-item" onclick="toggleCartClick()">
+                    <img src="../../img/shopping-cart.png" width="30" height="30" class="d-inline-block align-top" alt="">
+                    <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
             </ul>
-        </nav>
-    </div>
+        </div>
+    </nav>
+
+</div>
     <script type="text/javascript" src="js/header.js"></script>
 </body>
 </html>
