--- a/BE/src/main/resources/templates/admin/admin.html
+++ b/BE/src/main/resources/templates/admin/admin.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="css/global.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
+<div layout:decorator="layout">
+    <section layout:fragment="content">
 <container>
 
     <h1>Willkommen im Adminbereich von bestebrettspiele.at!</h1>
@@ -20,10 +23,12 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
-<script type="text/javascript" src="js/amdin.js"></script>
+<script type="text/javascript" src="js/admin.js"></script>
 <script>
     $(document).ready(loginReady());
 </script>
+</section>
+</div>
 </body>
 
 </html>
