--- a/BE/src/main/resources/templates/admin/admin.html
+++ b/BE/src/main/resources/templates/admin/admin.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/global.css">
+    <script type="text/javascript" src="js/global.js"></script>
     <title>beste.brettspiele.at</title>
 </head>
 <body>
 <div layout:decorator="layout">
     <section layout:fragment="content">
 <container>
-
     <h1>Willkommen im Adminbereich von bestebrettspiele.at!</h1>
-    <div class="input_container">
-
-    </div>
+    <a class="btn btn-primary" href="/vouchermanager" role="button">Vouchers</a>
+    <a class="btn btn-primary" href="/customermanager" role="button">Users</a>
+    <a class="btn btn-primary" href="/productmanager" role="button">Products</a>
 </container>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
