--- a/BE/src/main/resources/templates/admin/customermanager.html
+++ b/BE/src/main/resources/templates/admin/customermanager.html
@@ -2,6 +2,9 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
     <title>Customer Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <script type="text/javascript" src="js/global.js"></script>
 </head>
 <body>
 <div layout:decorator="layout">
