--- a/BE/src/main/resources/templates/admin/vouchermanager.html
+++ b/BE/src/main/resources/templates/admin/vouchermanager.html
@@ -2,6 +2,10 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout.html}">
 <head>
     <title>Voucher Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/global.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js%22%3E"></script>
+    <script type="text/javascript" src="js/global.js"></script>
 </head>
 <body>
 <div layout:decorator="layout">
@@ -13,9 +17,8 @@
         <!--    Gutscheincodes generieren
                 Gutschein mit Ablaufdatum und Wert anlegen
                 Übersicht aller Gutscheincodes-->
-        <container class="container" id="voucherData">
-
-        </container>
+        <container class="container" id="voucherWorkbenchContainer"></container>
+        <container class="container" id="voucherData"></container>
         <script type="text/javascript" src="js/vouchermanager.js"></script>
     </section>
 </div>
