-product delete & user delete

--- a/BE/src/main/resources/templates/admin/admin.html
+++ b/BE/src/main/resources/templates/admin/admin.html
@@ -14,6 +14,7 @@
 <div layout:decorator="layout">
     <section layout:fragment="content">
 <container>
+    <div id="popup" class="popup"> </div>
     <h1>Willkommen im Adminbereich von bestebrettspiele.at!</h1>
     <a class="btn btn-primary" href="/vouchermanager" role="button">Vouchers</a>
     <a class="btn btn-primary" href="/customermanager" role="button">Users</a>
