--- a/BE/src/main/resources/templates/admin/customermanager.html
+++ b/BE/src/main/resources/templates/admin/customermanager.html
@@ -9,13 +9,17 @@
 <body>
 <div layout:decorator="layout">
     <section layout:fragment="content">
+        <div id="popup" class="popup"> </div>
         <h1>Customer Manager</h1>
         <h1>Willkommen in der Kundenverwaltung von bestebrettspiele.at!</h1>
         <!--  Kunden verwalten -->
         <!--    Kunden auflisten und deren Bestelldetails einsehen
                 Kunden aktiv/inaktiv setzen
                 Bestellungen bearbeiten -->
-        <container class="container" id="allCustomerData">
+        <container class="container" id="userWorkbenchContainer">
+
+        </container>
+        <container class="container" id="allUserData">
 
         </container>
         <script type="text/javascript" src="js/customermanager.js"></script>
