--- a/BE/src/main/resources/templates/admin/productmanager.html
+++ b/BE/src/main/resources/templates/admin/productmanager.html
@@ -9,6 +9,7 @@
 <body>
 <div layout:decorator="layout">
     <section layout:fragment="content">
+        <div id="popup" class="popup"> </div>
         <h1>Willkommen in der Produktverwaltung von bestebrettspiele.at!</h1>
         <!-- Produktverwaltung -->
         <!-- Neue Produkte anlegen
