--- a/BE/src/main/resources/templates/admin/vouchermanager.html
+++ b/BE/src/main/resources/templates/admin/vouchermanager.html
@@ -10,6 +10,7 @@
 <body>
 <div layout:decorator="layout">
     <section layout:fragment="content">
+        <div id="popup" class="popup"> </div>
         <h1>Voucher Manager</h1>
 
         <h1>Willkommen in der Gutscheinverwaltung von bestebrettspiele.at!</h1>
