-cartBugFix & cartAmount & BackToShop-Button

--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -73,6 +73,11 @@
                     <img src="../../img/shopping-cart.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
+                <li class="nav-item">
+                    <div id="amountProductsContainer">
+                        <span id="amountProducts">0</span>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav>
