-try to implement adresse&payment to userRegistration

--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -31,6 +31,21 @@
                 <div class="invalid-feedback">Please enter a valid email address.</div>
             </div>
             <div class="mb-3">
+                <label for="adresse" class="form-label">Adresse</label>
+                <input type="text" class="form-control" id="adresse" name="adresse" required>
+                <div class="invalid-feedback">Please enter a valid address.</div>
+            </div>
+            <div>
+                <input type="radio" name="option" value="option1" id="option1">
+                <label for="option1">Kreditkarte</label>
+
+                <input type="radio" name="option" value="option2" id="option2">
+                <label for="option2">EPS</label>
+
+                <input type="radio" name="option" value="option3" id="option3">
+                <label for="option3">Klarna</label>
+            </div>
+            <div class="mb-3">
                 <label for="password" class="form-label">Password:</label>
                 <input type="password" class="form-control" id="password" name="password" required>
                 <div class="invalid-feedback">Please enter a password.</div>
