--- a/BE/src/main/resources/templates/authTemplates/login.html
+++ b/BE/src/main/resources/templates/authTemplates/login.html
@@ -22,8 +22,16 @@
                 <div class="input_row pw">
                     <input id="password"  type="password" name="Passwort" placeholder="Passwort" required>
                 </div>
-                <div class="text-center">
-                    <input id="submit-login" type="submit" value="Login">
+                <div class="row">
+                    <div class="col">
+                        <input id="submit-login" type="submit" value="Login">
+                    </div>
+                    <div class="col">
+                        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                    </div>
+                    <div class="col">
+                        <label for="vehicle1"> Anmeldedaten merken?</label>
+                    </div>
                 </div>
             </form>
         </div>
