--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,41 +6,6 @@
 </head>
 <body>
 <div class="header">
-<!--    <nav class="navbar">-->
-<!--        <ul class="menu">-->
-<!--            <li class="menu-item">-->
-<!--                <a href="/">Home</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item">-->
-<!--                <a href="/profile">Mein Konto</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item" id="logoutButton" onclick="logout()">-->
-<!--                <a href="/">Logout</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item" id="loginButton">-->
-<!--                <a href="/login">Login</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item" id="adminButton">-->
-<!--                <a href="/admin">Admin</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item" id="registerButton">-->
-<!--                <a href="/registration">Registration</a>-->
-<!--            </li>-->
-<!--            <li class="menu-item">-->
-<!--                <img src="../../img/shopping-cart.png" style="width:5%" onclick="toggleCartClick()">-->
-<!--                <div id="cartContainer" class="dropdown-cart-content"></div>-->
-<!--            </li>-->
-<!--            <li class="menu-item" id="userHeader">-->
-<!--                <a href="/profile">-->
-<!--                    <img src="../../img/user-icon.jpg" style="width:3%">-->
-<!--                    <div id="userprofileContainer" class="userprofileContainer"></div>-->
-<!--                </a>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-
-
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="" id="navbarNav">
             <ul class="navbar-nav"> <!-- Fehlende Bootstrap-Klasse hinzugefügt -->
@@ -81,7 +45,9 @@
             </ul>
         </div>
     </nav>
-
+    <!--<script>
+        $(document).ready(loadHeaderValues());
+    </script>-->
 </div>
     <script type="text/javascript" src="js/header.js"></script>
 </body>
