--- a/BE/src/main/resources/templates/admin/productmanager.html
+++ b/BE/src/main/resources/templates/admin/productmanager.html
@@ -18,9 +18,7 @@
         <container class="container" id="productWorkbenchContainer">
 
         </container>
-        <container class="container" id="allProductsData">
-
-        </container>
+        <container class="container" id="allProductsData"></container>
         <script type="text/javascript" src="js/productmanager.js"></script>
     </section>
 </div>
