--- a/BE/src/main/resources/templates/admin/vouchermanager.html
+++ b/BE/src/main/resources/templates/admin/vouchermanager.html
@@ -18,7 +18,7 @@
                 Gutschein mit Ablaufdatum und Wert anlegen
                 Übersicht aller Gutscheincodes-->
         <container class="container" id="voucherWorkbenchContainer"></container>
-        <container class="container" id="voucherData"></container>
+        <container class="container" id="voucherHeader"></container>
         <script type="text/javascript" src="js/vouchermanager.js"></script>
     </section>
 </div>
