--- a/BE/src/main/resources/templates/authTemplates/login.html
+++ b/BE/src/main/resources/templates/authTemplates/login.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/mystyle.css">
     <title>beste.brettspiele.at</title>
 </head>
 <body>
-
     <container>
-
         <div class="input_container">
             <form id="loginForm">
                 <!--Emailadresse-->
