toggle design ur wichtig

--- a/BE/src/main/resources/public/css/header.css
+++ b/BE/src/main/resources/public/css/header.css
@@ -46,7 +46,12 @@
 }
 
 
-
+#amountProducts {
+    background-color: red;
+    padding: 0px 8px;
+    border-radius: 50%;
+    color: snow;
+}
 
 
 
