--- a/BE/src/main/resources/public/css/header.css
+++ b/BE/src/main/resources/public/css/header.css
@@ -53,7 +53,14 @@
     color: snow;
 }
 
+#listItem li {
+    text-align: center;
+}
 
+.listItemValue {
+    display: inline-block;
+    width: 25%;
+}
 
 .header {
     /* Fügen Sie hier die gewünschten Stile hinzu, z. B. Hintergrundfarbe, Höhe, Abstand usw. */
