--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
+<div id="popup" class="popup"> </div> <!--style="display: none;"-->
+<div id="overlay" class="overlay"></div>
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="" id="navbarNav">
