--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -14,7 +14,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
-                <li class="nav-item">
+                <li id="profileButton" class="nav-item">
                     <a class="nav-link" href="/profile">Mein Konto</a>
                 </li>
                 <li id="logoutButton" class="nav-item" onclick="logout()">
