--- a/BE/src/main/resources/templates/authTemplates/registration.html
+++ b/BE/src/main/resources/templates/authTemplates/registration.html
@@ -54,9 +54,9 @@
                         <label class="form-label">Standard Zalungsart wählen:</label>
                         <div>
                             <select id="payment">
-                                <option value="option1">Kreditkarte</option>
-                                <option value="option2">EPS</option>
-                                <option value="option3">Klarna</option>
+                                <option value="kreditkarte">Kreditkarte</option>
+                                <option value="EPS">EPS</option>
+                                <option value="klarna">Klarna</option>
                             </select>
                         </div>
                     </div>
@@ -80,6 +80,5 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
 <script type="text/javascript" src="js/registration.js"></script>
-
 </body>
 </html>
