--- a/BE/src/main/resources/templates/footer.html
+++ b/BE/src/main/resources/templates/footer.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-<div th:fragment="footer">
-    &copy; 2016 Footer
+<div th:fragment="footer" style="text-align: center">
+    &copy; 2023 // Grohmann // Spitzer // Matyus
 </div>
 </body>
 </html>
