--- a/BE/src/main/resources/templates/header.html
+++ b/BE/src/main/resources/templates/header.html
@@ -35,7 +35,7 @@
                         <div id="userprofileContainer" class="userprofileContainer"></div>
                     </a>
                 </li>
-                <li class="nav-item" onclick="toggleCartClick()">
+                <li class="nav-item" id="shoppingCartNav" onclick="toggleCartClick()">
                     <img src="../../img/shopping-cart.png" width="30" height="30" class="d-inline-block align-top" alt="">
                     <div id="cartContainer" class="dropdown-cart-content"></div>
                 </li>
